--- a/tutorials/01_03_geometry.ipynb
+++ b/tutorials/01_03_geometry.ipynb
@@ -28,7 +28,7 @@
     "The complexity of a specimen can range from a single metal plate to complex 3 dimensional multi-part structures.\n",
     "In this tutorial, we will discuss specimen geometries based on a 2-dimensional cross-section that is extruded into 3d space.\n",
     "\n",
-    "First we open the example file and extract the workpiece informatation."
+    "First we open the example file and extract the workpiece information."
    ]
   },
   {
@@ -93,11 +93,11 @@
     "\n",
     "## Other cross-sections\n",
     "\n",
-    "Not all specimens might have a cross section that is described by a norm or the norm it uses might simply be not considered in the WelDX API.\n",
+    "Not all specimens might have a cross-section that is described by a norm, or the norm it uses might simply be not considered in the WelDX API.\n",
     "For such cases, WelDX provides a more generalized class called `Profile`.\n",
     "It allows us to define arbitrary cross-sections based on simple geometric elements such as lines and arcs.\n",
-    "So be aware, that you might get a `Profile` instead of any of the available groove types out of a WelDX file.\n",
-    "In fact, all groove types are based on the `Profile` class and we can convert them with the `to_profile` method:"
+    "So be aware, that you might get a `Profile` instead one of the available groove types out of a WelDX file.\n",
+    "In fact, all groove types are based on the `Profile` class, and we can convert them with the `to_profile` method:"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "source": [
     "The 3d plot you see does not show a closed surface but is composed of multiple triangles.\n",
     "The reason for this is that the default rendering backend, matplotlib, wasn't meant to be a 3d plotting tool.\n",
-    "Therefore it lacks certain features that would be necessary for a correct plot of a closed 3d surface.\n",
+    "Therefore, it lacks certain features that would be necessary for a correct plot of a closed 3d surface.\n",
     "Because all those plotted lines can make it sometimes hard to identify the actual shape, the plot function gives you the choice to plot only the control points instead of the triangles.\n",
     "This can be achieved by setting the `show_wireframe` parameter to `False`:"
    ]
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, we now got only 3 densly rendered profiles.\n",
+    "As you can see, we now got only 3 densely rendered profiles.\n",
     "Try some other values to figure out which setting suits you most.\n",
     "\n",
     "The last command also demonstrates two different ways to provide a Quantity to function that expects.\n",
@@ -253,7 +253,7 @@
     "The second approach does not require us to import `Q_` but it is limited to scalar values and only works for function parameters.\n",
     "\n",
     "Another noteworthy thing we did in the last command is using length units of different magnitude (`mm` and `cm`).\n",
-    "This is totally fine since `weldx` can handle all necessary conversions internally by utilizing the powerfull [Python package `pint`](https://pint.readthedocs.io/en/stable/)\n"
+    "This is totally fine since `weldx` can handle all necessary conversions internally by utilizing the powerful [Python package `pint`](https://pint.readthedocs.io/en/stable/)\n"
    ]
   },
   {
@@ -287,9 +287,9 @@
    "metadata": {},
    "source": [
     "Now we got a nice 3d rendering of the geometry with a closed surface that we shift and turn as we like.\n",
-    "But since `k3d` uses equal axis scaling, we notice that the specimen appears to be rather slim.\n",
-    "The reason for this is that the provided groove types only specify the shape of the groove, but not the actual specimen width.\n",
-    "But we can provide one during creation of the geometry using the `widht` parameter.\n",
+    "However, because `k3d` uses equal axis scaling, we notice that the specimen appears to be rather slim.\n",
+    "The reason for this is that the provided groove types only specify the shape of the groove and not the actual specimen width.\n",
+    "But we can provide one during creation of the geometry using the `width` parameter.\n",
     "Note that this only works with groove types and not with a plain `Profile`."
    ]
   },
@@ -360,7 +360,7 @@
     "## Conclusion\n",
     "\n",
     "In this tutorial we have learned that WelDX can store geometrical data in form of a 2d-cross section and an extrusion length.\n",
-    "The 2d cross section can either be of a specialized groove type or a more general `Profile`.\n",
+    "The 2d cross-section can either be of a specialized groove type or a more general `Profile`.\n",
     "Both can be visualized using the `plot` function and turned into an actual 3d geometry using the `Geometry` class.\n",
     "The `Geometry` class itself can also be rendered in a 3d plot and exported to a CAD compatible file format.\n",
     "\n",
