Fix linter issues

--- a/tutorials/01_03_geometry.ipynb
+++ b/tutorials/01_03_geometry.ipynb
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx import Geometry, Trace, LinearHorizontalTraceSegment, Q_\n",
+    "from weldx import Q_, Geometry, LinearHorizontalTraceSegment, Trace\n",
     "\n",
     "t = Trace(LinearHorizontalTraceSegment(wxfile[\"workpiece\"][\"geometry\"][\"seam_length\"]))\n",
     "geometry = Geometry(groove, t)"
@@ -343,7 +343,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "geometry.to_file(\"weldx_geometry.stl\", profile_raster_width=Q_(\"2mm\"), trace_raster_width=Q_(\"50mm\"))"
+    "geometry.to_file(\n",
+    "    \"weldx_geometry.stl\", profile_raster_width=Q_(\"2mm\"), trace_raster_width=Q_(\"50mm\")\n",
+    ")"
    ]
   },
   {
