Update unit handling of geometry package (#588)

--- a/tutorials/geometry_02_geometry.ipynb
+++ b/tutorials/geometry_02_geometry.ipynb
@@ -249,9 +249,9 @@
     "shape_right = Shape().add_line_segments(\n",
     "    Q_([[10, 8], [5, 8], [1, 2], [1, 0], [10, 0]], \"cm\")\n",
     ")\n",
-    "shape_left = shape_right.reflect_across_line([0, 0], [0, 1])\n",
+    "shape_left = shape_right.reflect_across_line(Q_([0, 0], \"cm\"), Q_([0, 1], \"cm\"))\n",
     "profile = Profile([shape_left, shape_right])\n",
-    "profile.plot(raster_width=Q_(1, \"cm\"))"
+    "profile.plot(raster_width=\"1cm\")"
    ]
   },
   {
@@ -337,13 +337,13 @@
     "shape_right_2 = Shape().add_line_segments(\n",
     "    Q_([[10, 8], [5, 8], [5, 2], [5, 0], [10, 0]], \"cm\")\n",
     ")\n",
-    "shape_left_2 = shape_right_2.reflect_across_line([0, 0], [0, 1])\n",
+    "shape_left_2 = shape_right_2.reflect_across_line(Q_([0, 0], \"cm\"), Q_([0, 1], \"cm\"))\n",
     "profile_2 = Profile([shape_left_2, shape_right_2])\n",
     "\n",
     "shape_right_3 = Shape().add_line_segments(\n",
     "    Q_([[10, 12], [2, 12], [4, 4], [4, 0], [10, 0]], \"cm\")\n",
     ")\n",
-    "shape_left_3 = shape_right_3.reflect_across_line([0, 0], [0, 1])\n",
+    "shape_left_3 = shape_right_3.reflect_across_line(Q_([0, 0], \"cm\"), Q_([0, 1], \"cm\"))\n",
     "profile_3 = Profile([shape_left_3, shape_right_3])\n",
     "\n",
     "\n",
@@ -376,7 +376,7 @@
    "source": [
     "v_profile = VariableProfile(\n",
     "    [profile_3, profile_2, profile],\n",
-    "    [0, 40, 100],\n",
+    "    Q_([0, 40, 100], \"cm\"),\n",
     "    [linear_profile_interpolation_sbs, linear_profile_interpolation_sbs],\n",
     ")\n",
     "\n",
@@ -465,13 +465,13 @@
    },
    "outputs": [],
    "source": [
-    "v_profile_custom_interp = VariableProfile([profile_3, profile_2], [0, 1], my_interp)\n",
-    "trace_custom_interp = Trace(LinearHorizontalTraceSegment(Q_(20, \"cm\")))\n",
+    "v_profile_custom_interp = VariableProfile(\n",
+    "    [profile_3, profile_2], Q_([0, 1], \"mm\"), my_interp\n",
+    ")\n",
+    "trace_custom_interp = Trace(LinearHorizontalTraceSegment(\"20cm\"))\n",
     "geometry_custom_interp = Geometry(v_profile_custom_interp, trace_custom_interp)\n",
     "\n",
-    "geometry_custom_interp.plot(\n",
-    "    profile_raster_width=Q_(0.25, \"cm\"), trace_raster_width=Q_(2, \"cm\")\n",
-    ")"
+    "geometry_custom_interp.plot(profile_raster_width=\"0.25cm\", trace_raster_width=\"2cm\")"
    ]
   }
  ],
