--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "groove.plot(raster_width=0.2)"
+    "groove.plot(raster_width=\"0.2mm\")"
    ]
   },
   {
@@ -156,8 +156,8 @@
    "outputs": [],
    "source": [
     "# rasterize geometry\n",
-    "profile_raster_width = 2  # resolution of each profile in mm\n",
-    "trace_raster_width = 30  # space between profiles in mm"
+    "profile_raster_width = \"2mm\"  # resolution of each profile in mm\n",
+    "trace_raster_width = \"30mm\"  # space between profiles in mm"
    ]
   },
   {
@@ -563,13 +563,6 @@
    "source": [
     "file.show_asdf_header()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -588,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
