--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "# define the weld seam length in mm\n",
-    "seam_length = 150\n",
+    "seam_length = Q_(150, \"mm\")\n",
     "\n",
     "# create a linear trace segment a the complete weld seam trace\n",
     "trace_segment = LinearHorizontalTraceSegment(seam_length)\n",
@@ -106,8 +106,8 @@
     "geometry = Geometry(groove.to_profile(width_default=Q_(5, \"mm\")), trace)\n",
     "\n",
     "# rasterize geometry\n",
-    "profile_raster_width = 2  # resolution of each profile in mm\n",
-    "trace_raster_width = 30  # space between profiles in mm\n",
+    "profile_raster_width = \"2mm\"  # resolution of each profile in mm\n",
+    "trace_raster_width = \"30mm\"  # space between profiles in mm\n",
     "geometry_data_sp = geometry.rasterize(\n",
     "    profile_raster_width=profile_raster_width, trace_raster_width=trace_raster_width\n",
     ")"
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "tcp_start_point = Q_([5.0, 0.0, 2.0], \"mm\")\n",
-    "tcp_end_point = Q_([seam_length - 5.0, 0.0, 2.0], \"mm\")\n",
+    "tcp_end_point = Q_([seam_length.m - 5.0, 0.0, 2.0], \"mm\")\n",
     "\n",
     "v_weld = Q_(10, \"mm/s\")\n",
     "s_weld = (tcp_end_point - tcp_start_point)[0]  # length of the weld\n",
@@ -636,7 +636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
