--- a/tutorials/01_04_coordinate_systems.ipynb
+++ b/tutorials/01_04_coordinate_systems.ipynb
@@ -117,16 +117,13 @@
     "For this purpose, the CSM also has a `plot` method.\n",
     "But before we use this method we have to take a small detour and talk about how time dependencies are treated by the CSM.\n",
     "\n",
-    "Time dependent transformations can either be provided to the CSM in form of mathematical expressions that depend on time or as set of discrete transformations that have a timestamp attached to them.\n",
-    "The first method is limited to describing expected transformation during the design process.\n",
-    "Experimental data is exclusively provided by discrete values.\n",
-    "Both cases raise certain issues if we want to use the `plot` method which will by default generate a static/non-interactive rendering.\n",
-    "For mathematical expressions, we would need to specify how densely we want to evaluate the expression to get a good understanding of the relative movements. \n",
-    "Think for example of a welding torch that performs a high frequency weaving motion that needs a much higher data point resulotion than a torch that performs a linear movement from one point to another.\n",
-    "Experimental data on the other side is usually acquired at a very high sample rate.\n",
-    "Plotting all those data points with the default rendering backend slows down the generation of the output and clutters the rendered image in a way that it is hard to recognize anything.\n",
+    "The number of data points for the torch trajectory (TCP) is relatively high because we are dealing with real measurement data here that was recorded with a high frequency.\n",
+    "When using the default rendering backend (matplotlib) each time dependent data point is rendered individually.\n",
+    "With huge amount of data, this takes a rather long time to compute and will possibly clutter the image with data points so that is hard to recognize anything.\n",
+    "The solution to both problems is to resample the time dependent data of the CSM.\n",
     "\n",
-    "The solution to both problems is to resample the time dependent data of the CSM. "
+    "We do this in three steps.\n",
+    "First we get the `time_union` of the CSM:"
    ]
   },
   {
@@ -135,8 +132,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx import Time\n",
-    "Time(csm.time_union().max()) - Time(csm.time_union().min())"
+    "time_union = csm.time_union()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `time_union` method collects every time value of all the time dependent coordinate systems of the CSM and merges them into a `Time` object.\n",
+    "`Time` is a simple class that handles all time related operations.\n",
+    "One of it's methods is called `resample`.\n",
+    "With this method we can create a new `Time` object with a specified number of data points that still has the same time boundaries as the original one.\n",
+    "So let's say we want to plot our time dependen data with 10 time steps.\n",
+    "We create a corresponding `Time` object with:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_resampled = time_union.resample(10)"
    ]
   },
   {
