--- a/tutorials/01_04_coordinate_systems.ipynb
+++ b/tutorials/01_04_coordinate_systems.ipynb
@@ -157,12 +157,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "csm.interp_time([csm.time_union().min(), csm.time_union().max()]).plot(data_sets=[])"
+    "We pass the the resampled time object to the `interp_time` method of the CSM.\n",
+    "This will create a new CSM instace where all time dependent data is interpolated to the passed time values:"
    ]
   },
   {
@@ -171,7 +170,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csm.plot(show_origins=False, data_sets=[])"
+    "csm_interp = csm.interp_time(time_resampled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can call `plot` of the interpolated CSM without having to worry, that the calculation takes several minutes to create the plot.\n",
+    "Note that we use `data_sets=[]` as additional argument.\n",
+    "This supresses the rendering of the attached specimen geometry data that would clutter the plot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# uncomment next line to enable interactive plots\n",
+    "# %matplotlib widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csm_interp.plot(data_sets=[])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The plot shows us the locations of all coordinate systems in 3d space.\n",
+    "Time dependent coordinate systems are represented by multiple control points that are connected by an equally colored line.\n",
+    "Each control point marks the position at one of the time steps we used to interpolate the original CSM.\n",
+    "\n",
+    "Depending on the number of coordinate systems, it might be beneficial to render just the ones we are interested in.\n",
+    "For this purpose, we can use the `coordinate_systems` parameter.\n",
+    "It expects a `list` with the names of the coordinate systems we like to render: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csm_interp.plot(\n",
+    "    coordinate_systems=[\"user_frame\", \"TCP\", \"flange\"],\n",
+    "    data_sets=[]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By checking the coordinate $x=0$, $y=0$, $z=0$ in the plot, you can derive that all data is plotted in the \"user_frame\" coordinate system.\n",
+    "This is because it is the root coordinate system of the CSM as can be seen in the graph we plotted earlier.\n",
+    "If you want to change the reference coordinate system, you can do this with the parameter `reference_system`.\n",
+    "This is especially interesting if time dependencies are involved.\n",
+    "Let's see how everything looks how everything looks from the torchs' perspective:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csm_interp.plot(\n",
+    "    coordinate_systems=[\"user_frame\", \"TCP\", \"flange\"],\n",
+    "    data_sets=[],\n",
+    "    reference_system=\"TCP\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the \"user_frame\" has suddenly become time dependent and the flange remains static.\n",
+    "This does make sense considering that the torch is mounted on the flange and both move in relation to the \"user_frame\" coordinate system.\n",
+    "The `plot` method has a lot more parameters to tweak the plot to your liking.\n",
+    "However, demonstrating them all would exceed the scope of this tutorial.\n",
+    "Checkout the [corresponding API documentation page](https://weldx.readthedocs.io/en/latest/_autosummary/weldx.CoordinateSystemManager.plot.html#weldx.CoordinateSystemManager.plot) to learn more."
    ]
   },
   {
