Apply pre-commit

--- a/tutorials/01_04_coordinate_systems.ipynb
+++ b/tutorials/01_04_coordinate_systems.ipynb
@@ -38,6 +38,7 @@
    "outputs": [],
    "source": [
     "from weldx import WeldxFile\n",
+    "\n",
     "wxfile = WeldxFile(\"single_pass_weld.wx\")"
    ]
   },
@@ -221,10 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csm_interp.plot(\n",
-    "    coordinate_systems=[\"user_frame\", \"TCP\", \"flange\"],\n",
-    "    data_sets=[]\n",
-    ")"
+    "csm_interp.plot(coordinate_systems=[\"user_frame\", \"TCP\", \"flange\"], data_sets=[])"
    ]
   },
   {
@@ -247,7 +245,7 @@
     "csm_interp.plot(\n",
     "    coordinate_systems=[\"user_frame\", \"TCP\", \"flange\"],\n",
     "    data_sets=[],\n",
-    "    reference_system=\"TCP\"\n",
+    "    reference_system=\"TCP\",\n",
     ")"
    ]
   },
@@ -323,12 +321,12 @@
    "outputs": [],
    "source": [
     "# uncomment next the following lines to run the plot\n",
-    "#csm.plot(\n",
+    "# csm.plot(\n",
     "#    coordinate_systems=[\"user_frame\", \"TCP\", \"flange\"],\n",
     "#    data_sets=[],\n",
     "#    reference_system=\"TCP\",\n",
     "#    backend=\"k3d\"\n",
-    "#)"
+    "# )"
    ]
   },
   {
