--- a/tutorials/01_01_introduction.ipynb
+++ b/tutorials/01_01_introduction.ipynb
@@ -16,13 +16,18 @@
     "Note that we will only cover the most common features and not all possible tools the `weldx` package provides.\n",
     "For more in-depth information, read the dedicated API tutorials or have a look at the [API documentation](https://weldx.readthedocs.io/en/latest/api.html) page.\n",
     "\n",
+    "## Jupyter notebooks and online documentation\n",
+    "\n",
     "All tutorials are written as jupyter notebooks so that you can always run and test the code on your local machine.\n",
     "You can find them in the `tutorials` subdirectory of [our GitHub repository](https://github.com/BAMWelDX/weldx).\n",
     "To learn how to install the `weldx` package and all required dependencies to run the tutorials, visit the [installation guide] (https://weldx.readthedocs.io/en/latest/install.html) page of our [online documentation](https://weldx.readthedocs.io/en/latest/index.html).\n",
     "\n",
     "All tutorials are also contained on the [\"Getting Started\"](https://weldx.readthedocs.io/en/latest/tutorials.html) page of the [online documentation](https://weldx.readthedocs.io/en/latest/index.html) so that you can read a nicely rendered version online.\n",
-    "In case you don't have the `weldx` package installed yet but want to test the tutorial code, you can click on the binder link button that can be found at the top of each tutorial in the online version of the documentation.\n",
-    "This will start a virtual machine with everything set up correctly that you can control through your browser.\n",
+    "\n",
+    "However, we strongly recommend to run and read the tutorials in a running jupyter-lab session.\n",
+    "Some features like interactive plots can only be displayed correctly by a jupyter server.\n",
+    "In case you don't have the `weldx` package or jupyter-lab installed yet but want to test the tutorial code, you can click on the binder link button that can be found at the top of each tutorial in the online version of the documentation.\n",
+    "This will start a virtual machine with everything set up correctly that you can access through your browser.\n",
     "\n",
     "## Opening and navigating through WelDX Files\n",
     "\n",
