--- a/tutorials/01_05_measurement_chains.ipynb
+++ b/tutorials/01_05_measurement_chains.ipynb
@@ -59,8 +59,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the file content we see, that thera actually multiple `Measurement` objects stored under the key `measurements`.\n",
-    "Let's extract the list and print the names of all measurements by using the `name` attribute:"
+    "From the file content we see, that there actually multiple `Measurement` objects stored under the key `\"measurements\"`.\n",
+    "Let's extract the list and print the names of all measurements by using the `name` attribute of the `Measurement` class:"
    ]
   },
   {
@@ -75,12 +75,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the output we learn that there are a current, voltage and two temperature measurements.\n",
+    "We will pick the current measurement for further discussion:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "measurements[0].measurement_chain.plot()"
+    "current_measurement = measurements[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `Measurement` class is just a data container that stores the name and the measured data of a measurement.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_measurement_chain = current_measurement.measurement_chain"
    ]
   },
   {
