--- a/tutorials/01_02_time_dependent_data.ipynb
+++ b/tutorials/01_02_time_dependent_data.ipynb
@@ -14,9 +14,7 @@
     "\n",
     "**Requirements:**\n",
     "\n",
-    "- Opening and navigating through WelDX files \n",
-    "\n",
-    "> TODO: link tutorial, once it is merged"
+    "- Opening and navigating through WelDX files ([tutorial](tutorials/01_01_introduction))"
    ]
   },
   {
