--- a/tutorials/01_02_time_dependent_data.ipynb
+++ b/tutorials/01_02_time_dependent_data.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "**Requirements:**\n",
     "\n",
-    "- Opening and navigating through WelDX files ([tutorial](tutorials/01_01_introduction))"
+    "- Opening and navigating through WelDX files ([tutorial](01_01_introduction))"
    ]
   },
   {
