add k3d example with pre-transformed data

--- a/Remove_me.ipynb
+++ b/Remove_me.ipynb
@@ -113,6 +113,36 @@
    "source": [
     "csm.plot(show_wireframe=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cabefc93-822d-41b5-bb7c-ef19b50732ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sd2 = csm.get_data(\"scan_data\", \"specimen\").coordinates.values.reshape(-1, 3)\n",
+    "sd2 = SpatialData(\n",
+    "    coordinates=sd2,\n",
+    "    triangles=triangles,\n",
+    ")\n",
+    "csm.assign_data(sd2, \"scan_data2\", \"specimen\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a958ce75-264f-4061-8171-e1af962b8880",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csm.plot(\n",
+    "    backend=\"k3d\",\n",
+    "    reference_system=\"specimen\",\n",
+    "    coordinate_systems=None,\n",
+    "    data_sets=[\"scan_data2\"],\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
