Add example section

--- a/tutorials/01_02_time_dependent_data.ipynb
+++ b/tutorials/01_02_time_dependent_data.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "**Requirements:**\n",
     "\n",
-    "- Opening and navigating through WelDX files ([tutorial](01_01_introduction))"
+    "- Opening and navigating through WelDX files ([tutorial](01_01_introduction.ipynb))"
    ]
   },
   {
@@ -132,7 +132,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " wxfile[\"welding_voltage\"].plot()"
+    "voltage =  wxfile[\"welding_voltage\"]\n",
+    "voltage.plot()"
    ]
   },
   {
@@ -250,6 +251,146 @@
    "outputs": [],
    "source": [
     "type(current.data_array.data.magnitude)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data processing examples\n",
+    "\n",
+    "Before we conclude this lesson, we will show you some simple examples on how to process the data obtained from a weldx file.\n",
+    "Pint and Xarray both offer you some basic functions to get the minimal and maximal values of a dataset or to calculate its mean value.\n",
+    "Here are the examples for Pint:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current.data.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current.data.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current.data.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you exchange `.data` with `.data_array`, you will get the same results just as `xarray.DataArray`.\n",
+    "\n",
+    "To demonstrate you some features of Xarray and Pint, we will now do a more involved computation by calculating the electric power using the equation:\n",
+    "\n",
+    "$$ P = \\frac{1}{T} \\int_{t=0}^{T} u \\cdot i \\;\\mathrm{d} t$$\n",
+    "\n",
+    "$u$ is the time dependent current,  $i$ the time dependent voltage, $t$ the time and $T$ the duration of the measurement.\n",
+    "We will do this step by step to keep it simple and to discuss all the things that need to be considered.\n",
+    "First we will calculate the integral with [Xarrays `.integrate` function](http://xarray.pydata.org/en/stable/generated/xarray.DataArray.integrate.html) which uses the trapezoidal rule."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "integral = (voltage.data_array * current.data_array).integrate(\"time\", datetime_unit=\"s\")\n",
+    "integral"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The paremeter `datetime_unit` specifies the unit of the time coordinates during the integration. \n",
+    "Unfortunately, at the time of writing of this tutorial, the unit support of Xarray is still work in progress and not fully implemented.\n",
+    "The result's unit is just $\\mathrm{A \\cdot V}$ while it should have been $\\mathrm{A \\cdot V \\cdot s}$.\n",
+    "We correct this by turning the resulting `xarray.DataArray` into a `pint.Quantity` (see previous section) and simply multiplying the missing unit.\n",
+    "Therefore we need to import the unit object `U_` from weldx."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from weldx import U_\n",
+    "q_integral = integral.data * U_(\"s\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What remains now is to divide the result by the process duration.\n",
+    "We can get the time data either from the voltage or the current data as they were both measured simultaneously.\n",
+    "It can be accessed with `.time` which returns a `weldx.Time` instance.\n",
+    "We will talk a bit more about this class in another tutorial.\n",
+    "For now it is sufficient to know, that it provides a `.duration` method to get the duration of the contained time data as a new `weldx.Time` instance and that we can turn it into a quantity using `.as_quantity`.\n",
+    "So let's finally calculate the electrical power:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e_power = q_integral / voltage.time.duration.as_quantity()\n",
+    "e_power"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can further simplify this by convert the units manually to Watt with `.to` or `.ito`.\n",
+    "The first method creates a new quantity, while the latter one modifies the existing one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e_power.ito(\"W\")\n",
+    "e_power"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you prefer compact numbers, you can use `.to_compact`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e_power.to_compact()"
    ]
   },
   {
