--- a/tutorials/01_02_time_dependent_data.ipynb
+++ b/tutorials/01_02_time_dependent_data.ipynb
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "voltage =  wxfile[\"welding_voltage\"]\n",
+    "voltage = wxfile[\"welding_voltage\"]\n",
     "voltage.plot()"
    ]
   },
@@ -312,7 +312,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "integral = (voltage.data_array * current.data_array).integrate(\"time\", datetime_unit=\"s\")\n",
+    "integral = (voltage.data_array * current.data_array).integrate(\n",
+    "    \"time\", datetime_unit=\"s\"\n",
+    ")\n",
     "integral"
    ]
   },
@@ -334,6 +336,7 @@
    "outputs": [],
    "source": [
     "from weldx import U_\n",
+    "\n",
     "q_integral = integral.data * U_(\"s\")"
    ]
   },
