add previous and next links

--- a/tutorials/01_01_introduction.ipynb
+++ b/tutorials/01_01_introduction.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Introduction / Opening WelDX Files\n",
     "\n",
+    "[NEXT TUTORIAL >>](01_02_time_dependent_data.ipynb)\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "This tutorial is the first one of a whole series that has the purpose to teach you how to work with WelDX files using the `weldx` Python package.\n",
@@ -148,7 +150,9 @@
     "\n",
     "This concludes the first tutorial about opening and navigating through WelDX Files.\n",
     "You should now be able to read any given WelDX file and to inspect its structure.\n",
-    "In the next tutorials, we will learn how to access the actual data and what we can do with it."
+    "In the next tutorials, we will learn how to access the actual data and what we can do with it.\n",
+    "\n",
+    "[NEXT TUTORIAL >>](01_02_time_dependent_data.ipynb)"
    ]
   }
  ],
