--- a/tutorials/01_02_time_dependent_data.ipynb
+++ b/tutorials/01_02_time_dependent_data.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Time dependent data / Welding current and voltage\n",
     "\n",
+    "[<< PREVIOUS TUTORIAL](01_01_introduction.ipynb) | [NEXT TUTORIAL >>](01_01_introduction.ipynb)\n",
+    "\n",
     "## Overview\n",
     "\n",
     "**This tutorial covers:**\n",
@@ -407,7 +409,9 @@
     "\n",
     "## Further readings\n",
     "\n",
-    "- [API tutorial: `TimeSeries`](https://weldx.readthedocs.io/en/latest/tutorials/timeseries_01.html)"
+    "- [API tutorial: `TimeSeries`](https://weldx.readthedocs.io/en/latest/tutorials/timeseries_01.html)\n",
+    "\n",
+    "[<< PREVIOUS TUTORIAL](01_01_introduction.ipynb) | [NEXT TUTORIAL >>](01_01_introduction.ipynb)"
    ]
   }
  ],
