remove limited_plot, allow string as color and look up attributes

--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -520,7 +520,7 @@
     "    backend=\"k3d\",\n",
     "    coordinate_systems=[\"tcp_contact\", \"tcp_wire\", \"T1\", \"T2\", \"T3\"],\n",
     "    colors=color_dict,\n",
-    "    limits=[[-5, 150]],\n",
+    "    limits=[-5, 150],\n",
     "    show_vectors=False,\n",
     "    show_traces=True,\n",
     "    show_data_labels=False,\n",
