--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -610,7 +610,7 @@
     "    backend=\"k3d\",\n",
     "    coordinate_systems=[\"tcp_wire_sine2\"],\n",
     "    colors=color_dict,\n",
-    "    limits=[[-5, 150]],\n",
+    "    limits=[0, 150],\n",
     "    show_vectors=False,\n",
     "    show_traces=True,\n",
     "    show_data_labels=False,\n",
