--- a/tutorials/01_02_time_dependent_data.ipynb
+++ b/tutorials/01_02_time_dependent_data.ipynb
@@ -409,10 +409,17 @@
     "\n",
     "## Further readings\n",
     "\n",
-    "- [API tutorial: `TimeSeries`](https://weldx.readthedocs.io/en/latest/tutorials/timeseries_01.html)\n",
+    "- [API tutorial: `TimeSeries`](timeseries_01.ipynb)\n",
     "\n",
     "[<< PREVIOUS TUTORIAL](01_01_introduction.ipynb) | [NEXT TUTORIAL >>](01_01_introduction.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
