--- a/tutorials/01_02_time_dependent_data.ipynb
+++ b/tutorials/01_02_time_dependent_data.ipynb
@@ -79,8 +79,8 @@
     "The object we extracted is of type `TimeSeries` as can be seen in the `info` output.\n",
     "This is a special type provided by WelDX to deal with time dependent data.\n",
     "\n",
-    "To see a plot of the `TimeSeries` simply call the built-in `.plot()` function.\n"
-    "If you are already familiar with `matplotlib` it is also easy to generate your own plots. We show how to access the underlying data later in this tutorial.\n",
+    "To see a plot of the `TimeSeries` simply call the built-in `.plot()` function.\n",
+    "If you are already familiar with `matplotlib` it is also easy to generate your own plots. We show how to access the underlying data later in this tutorial.\n"
    ]
   },
   {
