--- a/tutorials/01_02_time_dependent_data.ipynb
+++ b/tutorials/01_02_time_dependent_data.ipynb
@@ -408,10 +408,17 @@
     "\n",
     "## Further readings\n",
     "\n",
-    "- [API tutorial: `TimeSeries`](timeseries_01.ipynb)\n",
+    "- [API tutorial: <code>TimeSeries</code>](timeseries_01.ipynb)\n",
     "\n",
     "[<< PREVIOUS TUTORIAL](01_01_introduction.ipynb) | [NEXT TUTORIAL >>](01_01_introduction.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
