remove old code and update notebook

--- a/tutorials/welding_example_02_weaving.ipynb
+++ b/tutorials/welding_example_02_weaving.ipynb
@@ -49,7 +49,7 @@
     "    util,\n",
     "    welding,\n",
     ")\n",
-    "from weldx.welding.util import lcs_coords_from_ts, sine"
+    "from weldx.welding.util import sine"
    ]
   },
   {
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the `lcs_coords_from_ts` function to create the translation coordinate vectors at our specified timestamps."
+    "We define a new `LocalCoordinateSystem` and interpolate it our specified timestamps."
    ]
   },
   {
@@ -505,8 +505,7 @@
    "outputs": [],
    "source": [
     "t = pd.timedelta_range(start=\"0s\", end=\"8s\", freq=\"25ms\")\n",
-    "ts_sine_data = lcs_coords_from_ts(ts_sine, t)\n",
-    "tcp_sine2 = LocalCoordinateSystem(coordinates=ts_sine_data)"
+    "tcp_sine2 = LocalCoordinateSystem(coordinates=ts_sine).interp_time(t)"
    ]
   },
   {
