--- a/tutorials/experiment_design_01.ipynb
+++ b/tutorials/experiment_design_01.ipynb
@@ -72,7 +72,7 @@
     "from weldx import Q_\n",
     "from weldx import LocalCoordinateSystem as LCS\n",
     "from weldx import get_groove\n",
-    "from weldx.welding.util import lcs_coords_from_ts, sine"
+    "from weldx.welding.util import sine"
    ]
   },
   {
@@ -235,11 +235,10 @@
    "outputs": [],
    "source": [
     "sine_y = sine(f=Q_(1, \"Hz\"), amp=Q_([[0, 1, 0]], \"mm\"))\n",
-    "coords = lcs_coords_from_ts(sine_y, time)\n",
     "csm.add_cs(\n",
     "    coordinate_system_name=\"tcp_sine_y\",\n",
     "    reference_system_name=\"tcp_wire\",\n",
-    "    lcs=LCS(coordinates=coords),\n",
+    "    lcs=LCS(coordinates=sine_y),\n",
     ")"
    ]
   },
@@ -257,11 +256,10 @@
    "outputs": [],
    "source": [
     "sine_z = sine(f=Q_(1, \"Hz\"), amp=Q_([[0, 0, 2]], \"mm\"), bias=Q_([0, 0, 0], \"mm\"))\n",
-    "coords = lcs_coords_from_ts(sine_z, time)\n",
     "csm.add_cs(\n",
     "    coordinate_system_name=\"tcp_sine_z\",\n",
     "    reference_system_name=\"tcp_wire\",\n",
-    "    lcs=LCS(coordinates=coords),\n",
+    "    lcs=LCS(coordinates=sine_z),\n",
     ")"
    ]
   },
