--- a/tutorials/experiment_design_01.ipynb
+++ b/tutorials/experiment_design_01.ipynb
@@ -234,11 +234,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sine_y = sine(f=Q_(1, \"Hz\"), amp=Q_([[0, 1, 0]], \"mm\"))\n",
-    "csm.add_cs(\n",
+    "sine_y = sine(f=Q_(1, \"Hz\"), amp=Q_([0, 1, 0], \"mm\"))\n",
+    "csm.create_cs(\n",
     "    coordinate_system_name=\"tcp_sine_y\",\n",
     "    reference_system_name=\"tcp_wire\",\n",
-    "    lcs=LCS(coordinates=sine_y),\n",
+    "    coordinates=sine_y,\n",
     ")"
    ]
   },
@@ -255,11 +255,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sine_z = sine(f=Q_(1, \"Hz\"), amp=Q_([[0, 0, 2]], \"mm\"), bias=Q_([0, 0, 0], \"mm\"))\n",
-    "csm.add_cs(\n",
+    "sine_z = sine(f=Q_(1, \"Hz\"), amp=Q_([0, 0, 2], \"mm\"), bias=Q_([0, 0, 0], \"mm\"))\n",
+    "csm.create_cs(\n",
     "    coordinate_system_name=\"tcp_sine_z\",\n",
     "    reference_system_name=\"tcp_wire\",\n",
-    "    lcs=LCS(coordinates=sine_z),\n",
+    "    coordinates=sine_z,\n",
     ")"
    ]
   },
