--- a/tutorials/timeseries_01.ipynb
+++ b/tutorials/timeseries_01.ipynb
@@ -338,8 +338,8 @@
    "source": [
     "expr_string = \"a*sin(o*t)+b*t\"\n",
     "parameters = {\n",
-    "    \"a\": Q_(np.asarray([[1, 0, 0]]), \"m\"),\n",
-    "    \"b\": Q_([[0, 1, 0]], \"m/s\"),\n",
+    "    \"a\": Q_(np.asarray([1, 0, 0]), \"m\"),\n",
+    "    \"b\": Q_([0, 1, 0], \"m/s\"),\n",
     "    \"o\": Q_(\"36 deg/s\"),\n",
     "}\n",
     "expr = MathematicalExpression(expression=expr_string, parameters=parameters)\n",
@@ -383,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
