--- a/tutorials/weldxfile.ipynb
+++ b/tutorials/weldxfile.ipynb
@@ -318,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "WeldxFile(filename_hist)[\"history\"]"
+    "WeldxFile(filename_hist).history"
    ]
   },
   {
@@ -347,7 +347,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets now inspect how we wrote history."
+    "Let's now inspect how we wrote history."
    ]
   },
   {
@@ -356,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "WeldxFile(filename_hist)[\"history\"][\"entries\"][-1]"
+    "WeldxFile(filename_hist).history[-1]"
    ]
   },
   {
