Add Second tutorial about time dependent data (#564)

--- a/tutorials/01_01_introduction.ipynb
+++ b/tutorials/01_01_introduction.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Introduction / Opening WelDX Files\n",
     "\n",
+    "[NEXT TUTORIAL >>](01_02_time_dependent_data.ipynb)\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "This tutorial is the first one of a whole series that has the purpose to teach you how to work with WelDX files using the `weldx` Python package.\n",
@@ -20,7 +22,7 @@
     "\n",
     "All tutorials are written as jupyter notebooks so that you can always run and test the code on your local machine.\n",
     "You can find them in the `tutorials` subdirectory of [our GitHub repository](https://github.com/BAMWelDX/weldx).\n",
-    "To learn how to install the `weldx` package and all required dependencies to run the tutorials, visit the [installation guide] (https://weldx.readthedocs.io/en/latest/install.html) page of our [online documentation](https://weldx.readthedocs.io/en/latest/index.html).\n",
+    "To learn how to install the `weldx` package and all required dependencies to run the tutorials, visit the [installation guide](https://weldx.readthedocs.io/en/latest/install.html) page of our [online documentation](https://weldx.readthedocs.io/en/latest/index.html).\n",
     "\n",
     "All tutorials are also contained on the [\"Getting Started\"](https://weldx.readthedocs.io/en/latest/tutorials.html) page of the [online documentation](https://weldx.readthedocs.io/en/latest/index.html) so that you can read a nicely rendered version online.\n",
     "\n",
@@ -148,7 +150,9 @@
     "\n",
     "This concludes the first tutorial about opening and navigating through WelDX Files.\n",
     "You should now be able to read any given WelDX file and to inspect its structure.\n",
-    "In the next tutorials, we will learn how to access the actual data and what we can do with it."
+    "In the next tutorials, we will learn how to access the actual data and what we can do with it.\n",
+    "\n",
+    "[NEXT TUTORIAL >>](01_02_time_dependent_data.ipynb)"
    ]
   }
  ],
